objects/vlocity_cmt__AsyncProcessJob__c.object
<CustomObject>
    <description>To track the async job details</description>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Async Process object.</description>
        <label>Async Process</label>
        <referenceTo>vlocity_cmt__AsyncProcess__c</referenceTo>
        <relationshipLabel>Async Process Jobs</relationshipLabel>
        <relationshipName>AsyncProcessJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Async Process Step object.</description>
        <label>Async Process Step</label>
        <referenceTo>vlocity_cmt__AsyncProcessStep__c</referenceTo>
        <relationshipLabel>Async Process Jobs</relationshipLabel>
        <relationshipName>AsyncProcessJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemsProcessedList__c</fullName>
        <description>List of the items processed by this async job.</description>
        <label>Items Processed List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemsToProcessList__c</fullName>
        <description>List of the items to be processed by the remaining async job chain.</description>
        <label>Items to Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JobId__c</fullName>
        <description>Queuable process system id.</description>
        <externalId>true</externalId>
        <label>Job Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Message__c</fullName>
        <description>success or failure or any message related to async process job.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusCode__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Status code of this process job.</description>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>status of this async process job.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StepProgress__c</fullName>
        <description>this indicates process job type.</description>
        <label>Step Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>startProcess</fullName>
                    <label>Start Process</label>
                </value>
                <value>
                    <fullName>executeProcess</fullName>
                    <label>Execute Process</label>
                </value>
                <value>
                    <fullName>finishProcess</fullName>
                    <label>Finish Process</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Async Process Job</label>
    <nameField>
        <label>Async Process Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Process Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>